k8s-manifests/deployment-template.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace : demo
  name : deployment-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: app-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-demo
    spec:
      containers:
      - image: ${AWS_ACCOUNT_ID}.dkr.ecr.ap-northeast-2.amazonaws.com/${ECR_REPO}:${IMAGE_TAG}
        name: app-demo
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
