k8s-manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: demo
  name: service-demo
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app.kubernetes.io/name: app-demo
